--- a/part1_introduction.ipynb
+++ b/part1_introduction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "3fc5e497",
    "metadata": {
     "lines_to_next_cell": 0
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "6c76ff4b",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "a2d528da",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,8 @@
     "    Returns:\n",
     "        DataFrame containing the data\n",
     "    \"\"\" \n",
-    "    return pd.read_csv(file_path)"
+    "    df = pd.read_csv(file_path, parse_dates=[\"timestamp\"])\n",
+    "    return df"
    ]
   },
   {
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "7c492cca",
    "metadata": {},
    "outputs": [],
@@ -175,22 +176,18 @@
     "    # 3. Split data into training and testing sets\n",
     "    # 4. Handle missing values using SimpleImputer\n",
     "    \n",
-    "    rel_features = ['age', 'systolic_bp', 'diastolic_bp', 'glucose_level', 'bmi']\n",
-    "    target ='disease_outcome' \n",
+    "    df = df.dropna(subset=[\"disease_outcome\"])\n",
+    "    features = df[[\"age\", \"systolic_bp\", \"diastolic_bp\", \"glucose_level\", \"bmi\"]]\n",
+    "    labels = df[\"disease_outcome\"]\n",
     "\n",
-    "    X = df[rel_features]\n",
-    "    y = df[target]\n",
-    "\n",
-    "    # do imputation to deal with missing values\n",
-    "    imputer = SimpleImputer(strategy='mean')\n",
-    "    X_imputed = pd.DataFrame(imputer.fit_transform(X), columns=rel_features)\n",
-    "\n",
-    "    # Split\n",
     "    X_train, X_test, y_train, y_test = train_test_split(\n",
-    "        X_imputed, y, test_size=test_size, random_state=random_state, stratify=y\n",
-    "    )\n",
+    "    features, labels, test_size=test_size, random_state=random_state, stratify=labels\n",
+    ")\n",
     "\n",
-    "    # Placeholder return - replace with your implementation\n",
+    "    imputer = SimpleImputer(strategy=\"mean\")\n",
+    "    X_train = pd.DataFrame(imputer.fit_transform(X_train), columns=features.columns, index=X_train.index)\n",
+    "    X_test = pd.DataFrame(imputer.transform(X_test), columns=features.columns, index=X_test.index)\n",
+    "\n",
     "    return X_train, X_test, y_train, y_test"
    ]
   },
@@ -206,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "e1365fd8",
    "metadata": {},
    "outputs": [],
@@ -222,10 +219,11 @@
     "    Returns:\n",
     "        Trained logistic regression model\n",
     "    \"\"\"\n",
-    "    model = LogisticRegression(max_iter=1000)\n",
-    "    model.fit(X_train, y_train)\n",
+    "    clf = LogisticRegression()\n",
+    "    clf.fit(X_train, y_train)\n",
     "    \n",
-    "    return model  "
+    "    \n",
+    "    return clf"
    ]
   },
   {
@@ -240,24 +238,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "78de0196",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_evaluation_metrics(model, X_test, y_test):\n",
+    "def evaluate_model(model, X_test, y_test):\n",
     "    y_pred = model.predict(X_test)\n",
-    "    y_proba = model.predict_proba(X_test)[:, 1]\n",
+    "    y_probs = model.predict_proba(X_test)[:, 1]\n",
     "\n",
-    "    metrics = {\n",
-    "        'accuracy': accuracy_score(y_test, y_pred),\n",
-    "        'precision': precision_score(y_test, y_pred),\n",
-    "        'recall': recall_score(y_test, y_pred),\n",
-    "        'f1': f1_score(y_test, y_pred),\n",
-    "        'auc': roc_auc_score(y_test, y_proba),\n",
-    "        'confusion_matrix': confusion_matrix(y_test, y_pred).tolist()\n",
+    "    scores = {\n",
+    "        \"accuracy\": accuracy_score(y_test, y_pred),\n",
+    "        \"precision\": precision_score(y_test, y_pred),\n",
+    "        \"recall\": recall_score(y_test, y_pred),\n",
+    "        \"f1\": f1_score(y_test, y_pred),\n",
+    "        \"auc\": roc_auc_score(y_test, y_probs),\n",
+    "        \"confusion_matrix\": confusion_matrix(y_test, y_pred)\n",
     "    }\n",
-    "    return metrics"
+    "    return scores"
    ]
   },
   {
@@ -272,24 +270,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "id": "8d8a3082",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create results directory and save metrics\n",
-    "def save_results(metrics, output_path='results/results_part1.txt'):\n",
-    "    os.makedirs(os.path.dirname(output_path), exist_ok=True)\n",
-    "    with open(output_path, 'w') as f:\n",
-    "        for key, value in metrics.items():\n",
-    "            if key != 'confusion_matrix':\n",
-    "                f.write(f\"{key}: {value:.4f}\\n\")\n",
-    "            else:\n",
-    "                f.write(f\"{key}:\\n{np.array(value)}\\n\")\n",
-    "\n",
-    "# 1. Create 'results' directory if it doesn't exist\n",
-    "# 2. Format metrics as strings\n",
-    "# 3. Write metrics to 'results/results_part1.txt'"
+    "def export_results(results_dict, filepath=\"results/results_part1.txt\"):\n",
+    "    os.makedirs(os.path.dirname(filepath), exist_ok=True)\n",
+    "    with open(filepath, \"w\") as file:\n",
+    "        for k, v in results_dict.items():\n",
+    "            if k != \"confusion_matrix\":\n",
+    "                file.write(f\"{k}: {v:.4f}\\n\")"
    ]
   },
   {
@@ -304,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "id": "5f25fd75",
    "metadata": {},
    "outputs": [
@@ -318,42 +309,31 @@
       "f1: 0.4381\n",
       "auc: 0.8853\n",
       "\n",
-      "Results Interpretation:\n",
-      "best_metric: accuracy\n",
-      "worst_metric: recall\n",
-      "imbalance_impact_score: 1.0\n"
+      "Performance Summary:\n",
+      "strongest_metric: accuracy\n",
+      "weakest_metric: recall\n",
+      "class_imbalance_impact: 0.481\n"
      ]
     }
    ],
    "source": [
-    "# Main execution\n",
     "if __name__ == \"__main__\":\n",
-    "    # 1. Load data\n",
-    "    data_file = 'data/synthetic_health_data.csv'\n",
-    "    df = load_data(data_file)\n",
-    "    \n",
-    "    # 2. Prepare data\n",
-    "    X_train, X_test, y_train, y_test = prepare_data_part1(df)\n",
-    "    \n",
-    "    # 3. Train model\n",
+    "    dataset = load_data(\"data/synthetic_health_data.csv\")\n",
+    "    X_train, X_test, y_train, y_test = prepare_data_part1(dataset)\n",
     "    model = train_logistic_regression(X_train, y_train)\n",
-    "    \n",
-    "    # 4. Evaluate model\n",
-    "    metrics = calculate_evaluation_metrics(model, X_test, y_test)\n",
-    "    \n",
-    "    # 5. Print metrics\n",
-    "    for metric, value in metrics.items():\n",
-    "        if metric != 'confusion_matrix':\n",
-    "            print(f\"{metric}: {value:.4f}\")\n",
-    "    \n",
-    "    # 6. Save results\n",
-    "    # (Your code for saving results)\n",
-    "    \n",
-    "    # 7. Interpret results\n",
-    "    interpretation = interpret_results(metrics)\n",
-    "    print(\"\\nResults Interpretation:\")\n",
-    "    for key, value in interpretation.items():\n",
-    "        print(f\"{key}: {value}\")"
+    "    results = evaluate_model(model, X_test, y_test)\n",
+    "\n",
+    "    # Display metrics\n",
+    "    for metric, val in results.items():\n",
+    "        if metric != \"confusion_matrix\":\n",
+    "            print(f\"{metric}: {val:.4f}\")\n",
+    "\n",
+    "    export_results(results)\n",
+    "\n",
+    "    summary = analyze_performance(results)\n",
+    "    print(\"\\nPerformance Summary:\")\n",
+    "    for item, val in summary.items():\n",
+    "        print(f\"{item}: {val}\")\n"
    ]
   },
   {
@@ -368,45 +348,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "id": "d614f7ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def interpret_results(metrics):\n",
-    "    \"\"\"\n",
-    "    Analyze model performance on imbalanced data.\n",
-    "    \n",
-    "    Args:\n",
-    "        metrics: Dictionary containing evaluation metrics\n",
-    "        \n",
-    "    Returns:\n",
-    "        Dictionary with keys:\n",
-    "        - 'best_metric': Name of the metric that performed best\n",
-    "        - 'worst_metric': Name of the metric that performed worst\n",
-    "        - 'imbalance_impact_score': A score from 0-1 indicating how much\n",
-    "          the class imbalance affected results (0=no impact, 1=severe impact)\n",
-    "    \"\"\"\n",
-    "    metric_values = {k: v for k, v in metrics.items() if k != 'confusion_matrix'}\n",
-    "    best_metric = max(metric_values, key=metric_values.get)\n",
-    "    worst_metric = min(metric_values, key=metric_values.get)\n",
+    "# Result interpretation\n",
+    "def analyze_performance(metrics):\n",
+    "    perf_keys = [\"accuracy\", \"precision\", \"recall\", \"f1\", \"auc\"]\n",
+    "    top_metric = max(perf_keys, key=lambda m: metrics[m])\n",
+    "    bottom_metric = min(perf_keys, key=lambda m: metrics[m])\n",
+    "    impact_score = round(abs(metrics[\"accuracy\"] - metrics[\"f1\"]), 3)\n",
     "\n",
-    "    # Estimate imbalance impact: large drop from accuracy to f1/recall implies more impact\n",
-    "    imbalance_impact = (\n",
-    "        abs(metrics['accuracy'] - metrics['f1']) +\n",
-    "        abs(metrics['accuracy'] - metrics['recall'])\n",
-    "    ) / 2\n",
-    "    imbalance_impact_score = min(1.0, round(imbalance_impact * 2, 2))\n",
-    "    # 1. Determine which metric performed best and worst\n",
-    "    # 2. Calculate an imbalance impact score based on the difference\n",
-    "    #    between accuracy and more imbalance-sensitive metrics like F1 or recall\n",
-    "    # 3. Return the results as a dictionary\n",
-    "    \n",
-    "    # Placeholder return - replace with your implementation\n",
     "    return {\n",
-    "        'best_metric': best_metric,\n",
-    "        'worst_metric': worst_metric,\n",
-    "        'imbalance_impact_score': imbalance_impact_score\n",
+    "        \"strongest_metric\": top_metric,\n",
+    "        \"weakest_metric\": bottom_metric,\n",
+    "        \"class_imbalance_impact\": impact_score\n",
     "    }"
    ]
   }
