--- a/part2_feature_engineering.ipynb
+++ b/part2_feature_engineering.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "e83885b2",
    "metadata": {
     "lines_to_next_cell": 0
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "cfb4529f",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "67361628",
    "metadata": {},
    "outputs": [],
@@ -138,11 +138,8 @@
     "    Returns:\n",
     "        DataFrame containing the data with timestamp parsed as datetime\n",
     "    \"\"\"\n",
-    "    df = pd.read_csv(file_path, parse_dates=['timestamp'])\n",
-    "    # Load the CSV file using pandas\n",
-    "    # Make sure to parse the timestamp column as datetime\n",
-    "    \n",
-    "    return df  # Replace with actual implementation"
+    "    df = pd.read_csv(file_path, parse_dates = [\"timestamp\"])    \n",
+    "    return df  "
    ]
   },
   {
@@ -157,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "9c3dee1b",
    "metadata": {},
    "outputs": [],
@@ -166,17 +163,20 @@
     "    \"\"\"\n",
     "    Calculate rolling mean and standard deviation for heart rate.\n",
     "    \"\"\"\n",
-    "    df_sorted = df.sort_values('timestamp')\n",
-    "    df_indexed = df_sorted.set_index('timestamp')\n",
+    "    df = df.sort_values(\"timestamp\").set_index(\"timestamp\")\n",
     "\n",
-    "    rolling_window = df_indexed['heart_rate'].rolling(f'{window_size_seconds}s')\n",
-    "    df_indexed['hr_rolling_mean'] = rolling_window.mean()\n",
-    "    df_indexed['hr_rolling_std'] = rolling_window.std()\n",
+    "    # Calculate rolling stats\n",
+    "    rolling = df[\"heart_rate\"].rolling(f\"{window_size_seconds}s\")\n",
+    "    df[\"hr_rolling_mean\"] = rolling.mean()\n",
+    "    df[\"hr_rolling_std\"] = rolling.std()\n",
     "\n",
-    "    df_result = df_indexed.reset_index()\n",
-    "    df_result = df_result.fillna(method='bfill')  # Backward fill for NaNs\n",
-    "\n",
-    "    return df_result"
+    "    # Clean NaNs\n",
+    "    df[\"hr_rolling_mean\"].fillna(method=\"bfill\", inplace=True)\n",
+    "    df[\"hr_rolling_mean\"].fillna(method=\"ffill\", inplace=True)\n",
+    "    df[\"hr_rolling_std\"].fillna(method=\"bfill\", inplace=True)\n",
+    "    df[\"hr_rolling_std\"].fillna(method=\"ffill\", inplace=True)\n",
+    "    \n",
+    "    return df.reset_index().copy()\n"
    ]
   },
   {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ab0537a2",
    "metadata": {},
    "outputs": [],
@@ -200,15 +200,22 @@
     "    \"\"\"\n",
     "    Prepare data for modeling with time-series features.\n",
     "    \"\"\"\n",
-    "    features = ['heart_rate', 'hr_rolling_mean', 'hr_rolling_std']\n",
-    "    df_model = df_with_features.dropna(subset=features + ['disease_outcome'])  # Ensure no NaNs\n",
-    "    \n",
-    "    X = df_model[features]\n",
-    "    y = df_model['disease_outcome']\n",
+    "    # Select features and target\n",
+    "    features = [\"age\", \"systolic_bp\", \"diastolic_bp\", \"glucose_level\", \"bmi\", \n",
+    "            \"hr_rolling_mean\", \"hr_rolling_std\"]\n",
+    "    X = df_with_features[features]\n",
+    "    y = df_with_features[\"disease_outcome\"]\n",
     "\n",
+    "    # Train-test split\n",
     "    X_train, X_test, y_train, y_test = train_test_split(\n",
-    "        X, y, test_size=test_size, random_state=random_state\n",
+    "    X, y, test_size=test_size, random_state=random_state, stratify=y\n",
     "    )\n",
+    "\n",
+    "    # Handle missing values\n",
+    "    imputer = SimpleImputer(strategy=\"mean\")\n",
+    "    X_train = pd.DataFrame(imputer.fit_transform(X_train), columns=X.columns, index=X_train.index)\n",
+    "    X_test = pd.DataFrame(imputer.transform(X_test), columns=X.columns, index=X_test.index)\n",
+    "\n",
     "    return X_train, X_test, y_train, y_test"
    ]
   },
@@ -224,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "17ed8268",
    "metadata": {},
    "outputs": [],
@@ -233,9 +240,14 @@
     "    \"\"\"\n",
     "    Train a Random Forest classifier.\n",
     "    \"\"\"\n",
-    "    rf = RandomForestClassifier(n_estimators=n_estimators, max_depth=max_depth, random_state=random_state)\n",
-    "    rf.fit(X_train, y_train)\n",
-    "    return rf"
+    "    model = RandomForestClassifier(\n",
+    "    n_estimators=n_estimators,\n",
+    "    max_depth=max_depth,\n",
+    "    random_state=random_state\n",
+    "    )\n",
+    "    model.fit(X_train, y_train)\n",
+    "\n",
+    "    return model"
    ]
   },
   {
@@ -250,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "b5f3dee7",
    "metadata": {},
    "outputs": [],
@@ -258,14 +270,17 @@
     "import xgboost as xgb\n",
     "\n",
     "def train_xgboost(X_train, y_train, n_estimators=100, learning_rate=0.1, max_depth=5, random_state=42):\n",
-    "    model = xgb.XGBClassifier(n_estimators=n_estimators,\n",
-    "                              learning_rate=learning_rate,\n",
-    "                              max_depth=max_depth,\n",
-    "                              use_label_encoder=False,\n",
-    "                              eval_metric='logloss',\n",
-    "                              random_state=random_state)\n",
+    "    model = xgb.XGBClassifier(\n",
+    "    n_estimators=n_estimators,\n",
+    "    learning_rate=learning_rate,\n",
+    "    max_depth=max_depth,\n",
+    "    random_state=random_state,\n",
+    "    use_label_encoder=False,\n",
+    "    eval_metric=\"logloss\"\n",
+    ")\n",
     "    model.fit(X_train, y_train)\n",
-    "    return model\n"
+    "\n",
+    "    return model"
    ]
   },
   {
@@ -280,44 +295,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "c48eb71c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Random Forest AUC: 0.7745\n",
-      "XGBoost AUC: 0.7645\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/codespace/.local/lib/python3.12/site-packages/xgboost/core.py:158: UserWarning: [23:36:54] WARNING: /workspace/src/learner.cc:740: \n",
-      "Parameters: { \"use_label_encoder\" } are not used.\n",
-      "\n",
-      "  warnings.warn(smsg, UserWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rf_model = train_random_forest(X_train, y_train)\n",
-    "xgb_model = train_xgboost(X_train, y_train)\n",
+    "def model_compare (rf_model, xgb_model, X_test, y_test):\n",
+    "    rf_auc = roc_auc_score(y_test, rf_model.predict_proba(X_test)[:, 1])\n",
+    "    xgb_auc = roc_auc_score(y_test, xgb_model.predict_proba(X_test)[:, 1])\n",
     "\n",
-    "# 1. Generate probability predictions for both models\n",
-    "rf_probs = rf_model.predict_proba(X_test)[:, 1]\n",
-    "xgb_probs = xgb_model.predict_proba(X_test)[:, 1]\n",
+    "    print(f\"Random Forest AUC: {rf_auc:.4f}\")\n",
+    "    print(f\"XGBoost AUC: {xgb_auc:.4f}\")\n",
     "\n",
-    "# 2. Calculate AUC scores\n",
-    "rf_auc = roc_auc_score(y_test, rf_probs)\n",
-    "xgb_auc = roc_auc_score(y_test, xgb_probs)\n",
-    "\n",
-    "# 3. Compare the performance\n",
-    "print(f\"Random Forest AUC: {rf_auc:.4f}\")\n",
-    "print(f\"XGBoost AUC: {xgb_auc:.4f}\")"
+    "    return {\"rf_auc\": rf_auc, \"xgb_auc\": xgb_auc}"
    ]
   },
   {
@@ -332,23 +322,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "fdcdb044",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def save_results(metrics):\n",
+    "    os.makedirs(\"results\", exist_ok=True)\n",
     "\n",
-    "# 1. Create 'results' directory if it doesn't exist\n",
-    "os.makedirs('results', exist_ok=True)\n",
+    "    result_str = \"\\n\".join([f\"{k}: {v:.4f}\" for k, v in metrics.items()]) + \"\\n\"\n",
     "\n",
-    "# 2. Format AUC scores as strings\n",
-    "rf_auc_str = f\"Random Forest AUC: {rf_auc:.4f}\"\n",
-    "xgb_auc_str = f\"XGBoost AUC: {xgb_auc:.4f}\"\n",
-    "\n",
-    "# 3. Write scores to 'results/results_part2.txt'\n",
-    "with open('results/results_part2.txt', 'w') as f:\n",
-    "    f.write(rf_auc_str + '\\n')\n",
-    "    f.write(xgb_auc_str + '\\n')\n"
+    "    with open(\"results/results_part2.txt\", \"w\") as f:\n",
+    "        f.write(result_str)\n"
    ]
   },
   {
@@ -363,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "1ebbfb64",
    "metadata": {},
    "outputs": [
@@ -371,23 +356,57 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5042/3959412568.py:13: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-      "  df_result = df_result.fillna(method='bfill')  # Backward fill for NaNs\n"
+      "/tmp/ipykernel_6995/2416901249.py:13: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df[\"hr_rolling_mean\"].fillna(method=\"bfill\", inplace=True)\n",
+      "/tmp/ipykernel_6995/2416901249.py:13: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  df[\"hr_rolling_mean\"].fillna(method=\"bfill\", inplace=True)\n",
+      "/tmp/ipykernel_6995/2416901249.py:14: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df[\"hr_rolling_mean\"].fillna(method=\"ffill\", inplace=True)\n",
+      "/tmp/ipykernel_6995/2416901249.py:14: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  df[\"hr_rolling_mean\"].fillna(method=\"ffill\", inplace=True)\n",
+      "/tmp/ipykernel_6995/2416901249.py:15: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df[\"hr_rolling_std\"].fillna(method=\"bfill\", inplace=True)\n",
+      "/tmp/ipykernel_6995/2416901249.py:15: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  df[\"hr_rolling_std\"].fillna(method=\"bfill\", inplace=True)\n",
+      "/tmp/ipykernel_6995/2416901249.py:16: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df[\"hr_rolling_std\"].fillna(method=\"ffill\", inplace=True)\n",
+      "/tmp/ipykernel_6995/2416901249.py:16: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  df[\"hr_rolling_std\"].fillna(method=\"ffill\", inplace=True)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest AUC: 0.7745\n",
-      "XGBoost AUC: 0.7645\n"
+      "Random Forest AUC: 0.7808\n",
+      "XGBoost AUC: 0.7686\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/codespace/.local/lib/python3.12/site-packages/xgboost/core.py:158: UserWarning: [23:37:02] WARNING: /workspace/src/learner.cc:740: \n",
+      "/home/codespace/.local/lib/python3.12/site-packages/xgboost/core.py:158: UserWarning: [02:01:54] WARNING: /workspace/src/learner.cc:740: \n",
       "Parameters: { \"use_label_encoder\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -412,18 +431,11 @@
     "    rf_model = train_random_forest(X_train, y_train)\n",
     "    xgb_model = train_xgboost(X_train, y_train)\n",
     "    \n",
-    "    # 5. Calculate AUC scores\n",
-    "    rf_probs = rf_model.predict_proba(X_test)[:, 1]\n",
-    "    xgb_probs = xgb_model.predict_proba(X_test)[:, 1]\n",
-    "    \n",
-    "    rf_auc = roc_auc_score(y_test, rf_probs)\n",
-    "    xgb_auc = roc_auc_score(y_test, xgb_probs)\n",
-    "    \n",
-    "    print(f\"Random Forest AUC: {rf_auc:.4f}\")\n",
-    "    print(f\"XGBoost AUC: {xgb_auc:.4f}\")\n",
+    "    # 5. Compare model performance\n",
+    "    metrics = model_compare(rf_model, xgb_model, X_test, y_test)\n",
     "    \n",
     "    # 6. Save results\n",
-    "    # (Your code for saving results)"
+    "    save_results(metrics)\n"
    ]
   }
  ],
