--- a/part3_data_preparation.ipynb
+++ b/part3_data_preparation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "42771494",
    "metadata": {
     "lines_to_next_cell": 0
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "c358ca92",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "1951939d",
    "metadata": {},
    "outputs": [],
@@ -141,8 +141,8 @@
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
     "    # Load the CSV file using pandas\n",
-    "    \n",
-    "    return pd.read_csv(file_path)"
+    "    df = pd.read_csv(file_path)\n",
+    "    return df"
    ]
   },
   {
@@ -157,24 +157,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "3f327c5c",
    "metadata": {},
    "outputs": [],
    "source": [
     "def encode_categorical_features(df, column_to_encode='smoker_status'):\n",
-    "    encoder = OneHotEncoder(drop='first', sparse_output=False)  # Correct argument name\n",
-    "    encoded = encoder.fit_transform(df[[column_to_encode]])\n",
+    "    \"\"\"\n",
+    "    Encode a categorical column using OneHotEncoder.\n",
     "    \n",
-    "    # Create a DataFrame with the encoded columns\n",
+    "    Args:\n",
+    "        df: Input DataFrame\n",
+    "        column_to_encode: Name of the categorical column to encode\n",
+    "        \n",
+    "    Returns:\n",
+    "        DataFrame with the categorical column replaced by one-hot encoded columns\n",
+    "    \"\"\"\n",
+    "    cat_var = df[[column_to_encode]]\n",
+    "    encoder = OneHotEncoder(sparse_output = False, handle_unknown = 'ignore')\n",
+    "    encoded = encoder.fit_transform(cat_var)\n",
     "    encoded_cols = encoder.get_feature_names_out([column_to_encode])\n",
-    "    encoded_df = pd.DataFrame(encoded, columns=encoded_cols)\n",
-    "    \n",
-    "    # Drop the original categorical column and concatenate the encoded columns\n",
-    "    df = df.drop(columns=[column_to_encode])\n",
-    "    df = pd.concat([df, encoded_df], axis=1)\n",
-    "    \n",
-    "    return df\n"
+    "    encoded_df = pd.DataFrame(encoded, columns = encoded_cols, index = df.index)\n",
+    "    df = df.drop(columns = [column_to_encode])\n",
+    "    df = pd.concat([df, encoded_df], axis = 1)\n",
+    "    return df.copy()"
    ]
   },
   {
@@ -189,30 +195,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "id": "72749e83",
    "metadata": {},
    "outputs": [],
    "source": [
     "def prepare_data_part3(df, test_size=0.2, random_state=42):\n",
-    "    # Encode categorical features (e.g., smoker_status)\n",
-    "    df = encode_categorical_features(df, 'smoker_status')\n",
+    "    df = encode_categorical_features(df)\n",
+    "    X = df.drop(columns = [\"patient_id\", \"timestamp\", \"disease_outcome\"])\n",
+    "    y = df[\"disease_outcome\"]\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X,\n",
+    "                                                        y,\n",
+    "                                                        test_size = test_size,\n",
+    "                                                        random_state = random_state,\n",
+    "                                                        stratify = y)\n",
     "    \n",
-    "    # Select numeric columns for imputation\n",
-    "    numeric_columns = df.select_dtypes(include=['number']).columns\n",
-    "    \n",
-    "    # Separate features (X) and target (y)\n",
-    "    X = df[numeric_columns].drop(columns=['disease_outcome'])  # Drop target column\n",
-    "    y = df['disease_outcome']\n",
-    "    \n",
-    "    # Handle missing values using SimpleImputer\n",
     "    imputer = SimpleImputer(strategy='mean')\n",
-    "    X_imputed = imputer.fit_transform(X)\n",
-    "    \n",
-    "    # Split data into training and testing sets\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X_imputed, y, test_size=test_size, random_state=random_state, stratify=y)\n",
-    "    \n",
-    "    return X_train, X_test, y_train, y_test"
+    "    X_train = pd.DataFrame(imputer.fit_transform(X_train), columns = X.columns, index = X_train.index)\n",
+    "    X_test = pd.DataFrame(imputer.transform(X_test), columns = X.columns, index = X_test.index)\n",
+    "\n",
+    "    encoder = OneHotEncoder(sparse_output = False, handle_unknown = 'ignore')\n",
+    "\n",
+    "    return X_train, X_test, y_train, y_test, encoder"
    ]
   },
   {
@@ -227,13 +231,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "id": "eaa60f50",
    "metadata": {},
    "outputs": [],
    "source": [
     "def apply_smote(X_train, y_train, random_state=42):\n",
-    "    smote = SMOTE(random_state=random_state)\n",
+    "    smote = SMOTE(random_state = random_state)\n",
     "    X_resampled, y_resampled = smote.fit_resample(X_train, y_train)\n",
     "    return X_resampled, y_resampled\n"
    ]
@@ -250,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "fa13e5d1",
    "metadata": {},
    "outputs": [],
@@ -266,10 +270,7 @@
     "    Returns:\n",
     "        Trained logistic regression model\n",
     "    \"\"\"\n",
-    "    model = LogisticRegression(max_iter=1000)\n",
-    "    model.fit(X_train, y_train)\n",
-    "    # Initialize and train a LogisticRegression model\n",
-    "    \n",
+    "    model = LogisticRegression(max_iter = 1000).fit(X_train, y_train)\n",
     "    return model\n",
     "\n",
     "def calculate_evaluation_metrics(model, X_test, y_test):\n",
@@ -285,23 +286,14 @@
     "        Dictionary containing accuracy, precision, recall, f1, auc, and confusion_matrix\n",
     "    \"\"\"\n",
     "    y_pred = model.predict(X_test)\n",
-    "    y_proba = model.predict_proba(X_test)[:, 1]\n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "    precision = precision_score(y_test, y_pred)\n",
+    "    recall = recall_score(y_test, y_pred)\n",
+    "    f1 = f1_score(y_test, y_pred)\n",
+    "    auc = roc_auc_score(y_test, model.predict_proba(X_test)[:, 1])\n",
+    "    cm = confusion_matrix(y_test, y_pred)\n",
     "    \n",
-    "    metrics = {\n",
-    "        'accuracy': accuracy_score(y_test, y_pred),\n",
-    "        'precision': precision_score(y_test, y_pred),\n",
-    "        'recall': recall_score(y_test, y_pred),\n",
-    "        'f1': f1_score(y_test, y_pred),\n",
-    "        'auc': roc_auc_score(y_test, y_proba),\n",
-    "        'confusion_matrix': confusion_matrix(y_test, y_pred).tolist()  # Saveable\n",
-    "    }\n",
-    "    # 1. Generate predictions\n",
-    "    # 2. Calculate metrics: accuracy, precision, recall, f1, auc\n",
-    "    # 3. Create confusion matrix\n",
-    "    # 4. Return metrics in a dictionary\n",
-    "    \n",
-    "    # Placeholder return - replace with your implementation\n",
-    "    return metrics"
+    "    return {\"accuracy\": accuracy, \"precision\": precision, \"recall\": recall, \"f1\": f1, \"auc\": auc, \"confusion_matrix\": cm}\n"
    ]
   },
   {
@@ -316,17 +308,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "id": "d3f948be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "\n",
-    "os.makedirs('results', exist_ok=True)\n",
-    "\n",
-    "with open('results/results_part3.txt', 'w') as f:\n",
-    "    json.dump(metrics, f, indent=4)\n"
+    "def save_results(metrics):\n",
+    "    os.makedirs(\"results\", exist_ok = True)\n",
+    "    result_str = \"\"\n",
+    "    for metric, value in metrics.items():\n",
+    "        if metric != 'confusion_matrix':\n",
+    "            result_str += f\"{metric}: {value:.4f}\\n\"\n",
+    "    with open(\"results/results_part3.txt\", \"w\") as f:\n",
+    "        f.write(result_str)"
    ]
   },
   {
@@ -341,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "id": "599317e4",
    "metadata": {},
    "outputs": [
@@ -349,25 +343,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 0.8649\n",
-      "precision: 0.4054\n",
-      "recall: 0.8451\n",
-      "f1: 0.5479\n",
-      "auc: 0.9164\n",
-      "Part 1 results not found. Run part1_introduction.ipynb first.\n"
+      "accuracy: 0.8602\n",
+      "precision: 0.3946\n",
+      "recall: 0.8310\n",
+      "f1: 0.5351\n",
+      "auc: 0.9163\n",
+      "\n",
+      "Model Comparison (improvement percentages):\n",
+      "accuracy: -6.45%\n",
+      "precision: -41.66%\n",
+      "recall: 156.56%\n",
+      "f1: 22.15%\n",
+      "auc: 3.51%\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "# Main execution\n",
     "if __name__ == \"__main__\":\n",
     "    # 1. Load data\n",
     "    data_file = 'data/synthetic_health_data.csv'\n",
     "    df = load_data(data_file)\n",
     "    \n",
     "    # 2. Prepare data with categorical encoding\n",
-    "    X_train, X_test, y_train, y_test = prepare_data_part3(df)\n",
+    "    X_train, X_test, y_train, y_test, encoder = prepare_data_part3(df)\n",
     "    \n",
     "    # 3. Apply SMOTE to balance the training data\n",
     "    X_train_resampled, y_train_resampled = apply_smote(X_train, y_train)\n",
@@ -384,26 +382,29 @@
     "            print(f\"{metric}: {value:.4f}\")\n",
     "    \n",
     "    # 7. Save results\n",
-    "    import json\n",
-    "\n",
-    "    os.makedirs('results', exist_ok=True)\n",
-    "\n",
-    "with open('results/results_part3.txt', 'w') as f:\n",
-    "    json.dump(metrics, f, indent=4)\n",
+    "    save_results(metrics)\n",
     "    \n",
     "    # 8. Load Part 1 results for comparison\n",
-    "    import json\n",
+    "    part1_metrics = {}\n",
     "    try:\n",
     "        with open('results/results_part1.txt', 'r') as f:\n",
-    "            part1_metrics = json.load(f)\n",
-    "        \n",
+    "             for line in f:\n",
+    "                try:\n",
+    "                    key, value = line.strip().split(':', 1)\n",
+    "                    key = key.strip()\n",
+    "                    value = value.strip()\n",
+    "                    if key != \"confusion_matrix\":\n",
+    "                        part1_metrics[key] = float(value)\n",
+    "                except ValueError:\n",
+    "                    continue\n",
+    "                \n",
     "        # 9. Compare models\n",
     "        comparison = compare_models(part1_metrics, metrics)\n",
     "        print(\"\\nModel Comparison (improvement percentages):\")\n",
     "        for metric, improvement in comparison.items():\n",
     "            print(f\"{metric}: {improvement:.2f}%\")\n",
     "    except FileNotFoundError:\n",
-    "        print(\"Part 1 results not found. Run part1_introduction.ipynb first.\")"
+    "        print(\"Part 1 results not found. Run part1_introduction.ipynb first.\")\n"
    ]
   },
   {
@@ -418,20 +419,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "id": "d81ff9e1",
    "metadata": {},
    "outputs": [],
    "source": [
     "def compare_models(part1_metrics, part3_metrics):\n",
     "    improvements = {}\n",
-    "    for key in ['accuracy', 'precision', 'recall', 'f1', 'auc']:\n",
-    "        old = part1_metrics.get(key, 0)\n",
-    "        new = part3_metrics.get(key, 0)\n",
-    "        if old == 0:\n",
-    "            improvements[key] = float('inf')  # Avoid division by zero\n",
-    "        else:\n",
-    "            improvements[key] = ((new - old) / old) * 100\n",
+    "    for metric, value in part1_metrics.items():\n",
+    "        if metric != \"confusion_matrix\":\n",
+    "            improvement = ((part3_metrics[metric] - value) / part1_metrics[metric]) * 100\n",
+    "            improvements[metric] = round(improvement, 2)\n",
     "    return improvements\n"
    ]
   }
