--- a/part3_data_preparation.ipynb
+++ b/part3_data_preparation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "42771494",
    "metadata": {
     "lines_to_next_cell": 0
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "c358ca92",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "1951939d",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "3f327c5c",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "72749e83",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "eaa60f50",
    "metadata": {},
    "outputs": [],
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "fa13e5d1",
    "metadata": {},
    "outputs": [],
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "d3f948be",
    "metadata": {},
    "outputs": [],
@@ -324,6 +324,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2132ffdf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_models(part1_metrics, part3_metrics):\n",
+    "    improvements = {}\n",
+    "    for metric, value in part1_metrics.items():\n",
+    "        if metric != \"confusion_matrix\":\n",
+    "            improvement = ((part3_metrics[metric] - value) / part1_metrics[metric]) * 100\n",
+    "            improvements[metric] = round(improvement, 2)\n",
+    "    return improvements\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3c73265a",
    "metadata": {},
@@ -335,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "599317e4",
    "metadata": {},
    "outputs": [
@@ -419,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "d81ff9e1",
    "metadata": {},
    "outputs": [],
