--- a/part1_introduction.ipynb
+++ b/part1_introduction.ipynb
@@ -284,6 +284,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b674d90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Result interpretation\n",
+    "def analyze_performance(metrics):\n",
+    "    perf_keys = [\"accuracy\", \"precision\", \"recall\", \"f1\", \"auc\"]\n",
+    "    top_metric = max(perf_keys, key=lambda m: metrics[m])\n",
+    "    bottom_metric = min(perf_keys, key=lambda m: metrics[m])\n",
+    "    impact_score = round(abs(metrics[\"accuracy\"] - metrics[\"f1\"]), 3)\n",
+    "\n",
+    "    return {\n",
+    "        \"strongest_metric\": top_metric,\n",
+    "        \"weakest_metric\": bottom_metric,\n",
+    "        \"class_imbalance_impact\": impact_score\n",
+    "    }"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "be0ba063",
    "metadata": {},
